--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
 <body>
     <header>
         <h1>Sonnet: to Science</h1>
-        <nav><!-- TODO: Add proper hrefs to links. -->
-            <ul class="top-nav"><!-- TODO: Make this list be a horizontal navigation -->
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">About Poe</a></li>
-                <li><a href="">Interpretation</a></li>
+        <nav>
+            <ul class="top-nav">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about-poe.html">About Poe</a></li>
+                <li><a href="interpretation.html">Interpretation</a></li>
             </ul>
         </nav>
     </header>
-    <aside id="sidebar"><!-- TODO: Make sidebar float right. -->
+    <aside id="sidebar-1">
         <h2>Did you know?</h2>
         <p>
             Poe is often credited with being an early pioneer of Science
             Fiction since he published "The Balloon-Hoax" in 1844, and he is
             also credited with inventing the Mystery/Detective story genre
-            with the first detective story (&ldquo;The Murders in the Rue
-            Morgue&rdquo; &ndash; 1841).
+            with the first detective story <sup>(&ldquo;The Murders in the Rue
+          Morgue&rdquo; &ndash; 1841).</sup>
         </p>
         <h2>Share This!</h2>
         <ul>
@@ -35,7 +35,7 @@
         </ul>
     </aside>
     <section id="content">
-        <ul class="poem"><!-- TODO: Remove bullets and style poem -->
+        <ul class="poem">
             <li>Science! true daughter of Old Time thou art!</li>
             <li>Who alterest all things with thy peering eyes.</li>
             <li>Why preyest thou thus upon the poet's heart,</li>
@@ -53,11 +53,11 @@
         </ul>
     </section>
     <footer>
-        <nav><!-- TODO: Add proper hrefs to links. -->
-            <ul class="bottom-nav"><!-- TODO: Make this list be a horizontal navigation -->
-                <li><a href="" class="active">Home</a></li>
-                <li><a href="">About Poe</a></li>
-                <li><a href="">Interpretation</a></li>
+        <nav>
+            <ul class="bottom-nav">
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about-poe.html">About Poe</a></li>
+                <li><a href="interpretation.html">Interpretation</a></li>
             </ul>
         </nav>
         <p>&copy;2015 Jane Student</p>
