Created Social Links

--- a/about-poe.html
+++ b/about-poe.html
@@ -32,9 +32,16 @@
 
         <h2>Share This!</h2>
         <ul>
-            <li><a class="twitter" href="http://twitter.com">Twitter</a></li>
-            <li><a class="facebook" href="http://facebook.com">Facebook</a></li>
-            <li><a class="pinterest" href="http://pinterest.com">Pinterest</a></li>
+          <div id="share-buttons">
+            <!-- Twitter -->
+            <a href="http://twitter.com" target="_blank">
+            <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /></a>            
+            <!-- Facebook -->
+            <a href="http://facebook.com" target="_blank">
+            <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /></a>
+            <!-- Pinterest -->
+            <a href="http://pinterest.com">
+            <img src="https://simplesharebuttons.com/images/somacro/pinterest.png" alt="Pinterest" /></a>
         </ul>
     </aside>
     <section id="content">
@@ -42,7 +49,7 @@
         <p class="bio-photo">
           <figure>
             <img src="Edgar_Allan_Poe_daguerreotype_crop.png" alt="Edgar Allan Poe" width= "256" height="358">
-            <figcaption><sup>Daguerreotype of Edgar Allan Poe, known as the "Annie" Daguerreotyp</sup></figcaption>
+            <figcaption><sup>Daguerreotype of Edgar Allan Poe, <br>known as the "Annie" Daguerreotyp</sup></figcaption>
           </figure>
         </p>
     <section id="bio-photo-content">
