--- a/index.html
+++ b/index.html
@@ -29,9 +29,16 @@
         </p>
         <h2>Share This!</h2>
         <ul>
-            <li><a class="twitter" href="http://twitter.com">Twitter</a></li>
-            <li><a class="facebook" href="http://facebook.com">Facebook</a></li>
-            <li><a class="pinterest" href="http://pinterest.com">Pinterest</a></li>
+          <div id="share-buttons">
+            <!-- Twitter -->
+            <a href="http://twitter.com" target="_blank">
+            <img src="https://simplesharebuttons.com/images/somacro/twitter.png" alt="Twitter" /></a>            
+            <!-- Facebook -->
+            <a href="http://facebook.com" target="_blank">
+            <img src="https://simplesharebuttons.com/images/somacro/facebook.png" alt="Facebook" /></a>
+            <!-- Pinterest -->
+            <a href="http://pinterest.com">
+            <img src="https://simplesharebuttons.com/images/somacro/pinterest.png" alt="Pinterest" /></a>
         </ul>
     </aside>
     <section id="content">
