Adjusted table margin

--- a/about-poe.html
+++ b/about-poe.html
@@ -62,15 +62,16 @@
         <p>Poe and his works influenced literature in the United States and around the world, as well as in specialized fields, such as cosmology and cryptography. Poe and his work appear throughout popular culture in literature, music, films, and television. A number of his homes are dedicated museums today. The Mystery Writers of America present an annual award known as the Edgar Award for distinguished work in the mystery genre.</p>
     </section>
         <p class="smalltext">
-            <sup>The content of this biographical summary is used under the
+            The content of this biographical summary is used under the
             <a href="http://en.wikipedia.org/wiki/Wikipedia:Text_of_Creative_Commons_Attribution-ShareAlike_3.0_Unported_License">
                 Creative Commons Attribution-ShareAlike License</a>
             from <a href="http://en.wikipedia.org/wiki/Edgar_Allan_Poe">
-              the Wikipedia entry for Edgar Allan Poe</a>.</sup>
+              the Wikipedia entry for Edgar Allan Poe</a>.
         </p>
-        <h2>Selected Works</h2>
+      
+      <h3>Selected Stories, Poems, and Works by Edgar Allan Poe</h3>
         <table id="selected_works">
-          <caption><b>Selected Stories, Poems, and Works by Edgar Allan Poe</b></caption>
+<!--           <caption><b>Selected Stories, Poems, and Works by Edgar Allan Poe</b></caption> -->
           <tr>
             <th scope="col">Title</th>
             <th scope="col">Year</th>
